--- a/wakelock/pubspec.yaml
+++ b/wakelock/pubspec.yaml
@@ -18,8 +18,7 @@ dependencies:
   wakelock_macos: ^0.4.0
   wakelock_platform_interface: ^0.3.0
   wakelock_web: ^0.4.0
-  wakelock_windows:
-     path: ../wakelock_windows
+  wakelock_windows: ^2.1
 
 dev_dependencies:
   flutter_test:
